# dev_api

./: README.md  app.py  app_restful.py  exercicio01.py  habilidades.py  pyproject.toml  requirements.txt
API RRESTful/: atividades.db
Exercicio 03/: models.py  utils.py
bd_SQLAlchemy_project/: models.py  utils.py
exercicio03/: models.py  programadores.db
